--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your site</title>
+    <title>JavaScript Strings test</title>
     <link rel="stylesheet" href="app.css" />
   </head>
   <body>
     <nav>
-      <h1>Name variations</h1>
+      <h1>Name variations (or any string really)</h1>
     </nav>
 
     <main>
