Add Reverse String

--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
               <td>Without leading<br />and trailing spaces</td>
               <td id="answer7"></td>
             </tr>
+            <tr>
+              <td>Reverse (simple way)</td>
+              <td id="answer8"></td>
+            </tr>
+            <tr>
+              <td>Reverse (for of way)</td>
+              <td id="answer9"></td>
+            </tr>
           </tbody>
         </table>
       </div>
