Initial reduction of boilerplate, add isAnagram function with basic test case

--- a/index.html
+++ b/index.html
@@ -8,17 +8,27 @@
   </head>
   <body>
     <nav>
-      <h1>Name variations (or any string really)</h1>
+      <h1>Anagram</h1>
     </nav>
 
     <main>
       <div>
-        <label class="label" for="component-name">Enter your name</label>
+        <label class="label" for="component-name">Word(s) A</label>
         <input
           type="text"
           class="textbox"
-          placeholder="Your name"
-          id="your-name"
+          placeholder="Words"
+          id="wordsa"
+        />
+      </div>
+
+      <div>
+        <label class="label" for="component-name">Word(s) B</label>
+        <input
+          type="text"
+          class="textbox"
+          placeholder="Words"
+          id="wordsb"
         />
       </div>
 
@@ -26,46 +36,15 @@
         <table border="1">
           <thead>
             <tr>
-              <th width="200px">Variation</th>
               <th>Result</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>Number of characters</td>
               <td id="answer1"></td>
             </tr>
             <tr>
-              <td>First character</td>
               <td id="answer2"></td>
-            </tr>
-            <tr>
-              <td>Last character</td>
-              <td id="answer3"></td>
-            </tr>
-            <tr>
-              <td>Lower case</td>
-              <td id="answer4"></td>
-            </tr>
-            <tr>
-              <td>Upper case</td>
-              <td id="answer5"></td>
-            </tr>
-            <tr>
-              <td>Capitalize</td>
-              <td id="answer6"></td>
-            </tr>
-            <tr>
-              <td>Without leading<br />and trailing spaces</td>
-              <td id="answer7"></td>
-            </tr>
-            <tr>
-              <td>Reverse (simple way)</td>
-              <td id="answer8"></td>
-            </tr>
-            <tr>
-              <td>Reverse (for of way)</td>
-              <td id="answer9"></td>
             </tr>
           </tbody>
         </table>
