Fix attempt for CI

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <nav>
-      <h1>Anagram tester</h1>
+      <h1>Anagram Tester - Enter two phrases (spaces fine) and see if they are an anagram</h1>
     </nav>
 
     <main>
