--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <main>
       <div>
-        <label class="label" for="component-name">Word(s) A</label>
+        <label class="label" for="component-name">Selection of Word(s) #1</label>
         <input
           type="text"
           class="textbox"
@@ -23,7 +23,7 @@
       </div>
 
       <div>
-        <label class="label" for="component-name">Word(s) B</label>
+        <label class="label" for="component-name">Selection of Word(s) #2</label>
         <input
           type="text"
           class="textbox"
